--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,11 @@
 @import './utils/mixins';
 @import './common';
-@import './example';
+@import './layouts/header';
+@import './layouts/hero';
+@import './layouts/about';
+@import './layouts/advantages';
+@import './layouts/contacts';
+@import './layouts/customer-reviews';
+@import './layouts/gallery';
+@import './layouts/products';
+@import './layouts/footer';
