--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -7,7 +7,7 @@
         <li class="advantages-list_item">
           <div class="insite">
             <svg class="advantages-list_icon" width="50" height="50">
-              <use href="">
+              <use href="#">
               </use>
             </svg>
           </div>
@@ -18,7 +18,7 @@
         <li class="advantages-list_item">
           <div class="insite">
             <svg class="advantages-list_icon" width="50" height="50">
-              <use href="">
+              <use href="#">
               </use>
             </svg>
           </div>
@@ -29,7 +29,7 @@
         <li class="advantages-list_item">
           <div class="insite">
             <svg class="advantages-list_icon" width="50" height="50">
-              <use href="">
+              <use href="#">
               </use>
             </svg>
           </div>
