--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="section-about">
-  <div class="container-about">
+  <div class="container">
     <p class="about-pretitle">Tradition and love</p>
     <h2 class="about-title">How it’s made?</h2>
     <div class="about-image">
