--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,31 @@
-1
+<footer class="footer">
+  <div class="container">
+    <div class="footer__main">
+      <h1>homemade ice cream made</h1>
+      <p>with passion</p>
+    </div>
+    <div class="footer__soc">
+      <ul class="footer__soc soc-list">
+        <li class="soc-item"><a class="soc-link">
+            <svg class="icon" width="34" height="34">
+              <use></use>
+            </svg>
+          </a></li>
+        <li class="soc-item"><a class="soc-link">
+            <svg class="icon" width="34" height="34">
+              <use class="icon"></use>
+            </svg>
+          </a></li>
+        <li class="soc-item"><a class="soc-link">
+            <svg class="icon" width="34" height="34">
+              <use class="icon"></use>
+            </svg>
+          </a></li>
+      </ul>
+    </div>
+    <address>
+      <span>free to contact</span>
+      <a class="footer__link" href="tel:+61 (0) 383 766 284">+61 (0) 383 766 284</a>
+    </address>
+  </div>
+</footer>
