--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__main">
-      <h1>homemade ice cream made</h1>
+      <p>homemade ice cream made</p>
       <p>with passion</p>
     </div>
     <div class="footer__soc">
@@ -25,7 +25,7 @@
     </div>
     <address>
       <span>free to contact</span>
-      <a class="footer__link" href="tel:+61 (0) 383 766 284">+61 (0) 383 766 284</a>
+      <a class="footer__link" href="tel:+61(0)383766284">+61(0)383766284</a>
     </address>
   </div>
 </footer>
