--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
     </div>
     <address>
       <span>free to contact</span>
-      <a class="footer__link" href="tel:+61(0)383766284">+61(0)383766284</a>
+      <a class="footer__link" href="tel:+610383766284">+61(0)383766284</a>
     </address>
   </div>
 </footer>
