--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,11 @@
     <div class="container">
         <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60" height="60">
         <nav class="header__nav">
-            <ul class="header__list">
-                <li class="header__items"><a class="header__link" href="#">Home</a></li>
-                <li class="header__items"><a class="header__link" href="#">How it’s made?</a></li>
-                <li class="header__items"><a class="header__link" href="#">Our products/a></li>
-                <li class="header__items"><a class="header__link" href="#">Contact</a></li>
+            <ul class="header__list list">
+                <li class="header__items"><a class="header__link link" href="#">Home</a></li>
+                <li class="header__items"><a class="header__link link" href="#">How it’s made?</a></li>
+                <li class="header__items"><a class="header__link link" href="#">Our products</a></li>
+                <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
             </ul>
         </nav>
         <button class="header__btn btn" type="button">
