--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,21 +6,27 @@
     </div>
     <div class="footer__soc">
       <ul class="footer__soc soc-list">
-        <li class="soc-item"><a class="soc-link">
+        <li class="soc-item">
+          <a class="soc-link">
             <svg class="icon" width="34" height="34">
-              <use></use>
+              <use href="images/icons.svg#icon-github-icon"></use>
             </svg>
-          </a></li>
-        <li class="soc-item"><a class="soc-link">
+          </a>
+        </li>
+        <li class="soc-item">
+          <a class="soc-link">
             <svg class="icon" width="34" height="34">
-              <use class="icon"></use>
+              <use href="images/icons.svg#icon-telegram-icon"></use>
             </svg>
-          </a></li>
-        <li class="soc-item"><a class="soc-link">
+          </a>
+        </li>
+        <li class="soc-item">
+          <a class="soc-link">
             <svg class="icon" width="34" height="34">
-              <use class="icon"></use>
+              <use href="images/icons.svg#icon-facebook-icon"></use>
             </svg>
-          </a></li>
+          </a>
+        </li>
       </ul>
     </div>
     <address>
