--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,32 +1,32 @@
 <section class="section-products">
-    <div class="container-products">
-        <p>100% natural</p>
-        <h2>products</h2>
-        <ul>
-            <li>
-                <h3>ice cream</h3>
-                <p>Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
-                <button type="button">
+    <div class="container-products container">
+        <p class="container-products_text">100% natural</p>
+        <h2 class="container-products_header">products</h2>
+        <ul class="products-list list">
+            <li class="products-list_item products-list_item--ice-cream products-list_item--green">
+                <h3 class="product-list_title">ice cream</h3>
+                <p class="product-list_text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
+                <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use></use>
+                        <use href="./images/symbol-defs.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
-            <li>
-                <h3>ice coffee</h3>
-                <p>Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
-                <button type="button">
+            <li class="products-list_item products-list_item--coffee products-list_item--yellow">
+                <h3 class="product-list_title">ice coffee</h3>
+                <p class="product-list_text">Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
+                <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use></use>
+                        <use href="./images/symbol-defs.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
-            <li>
-                <h3>milkshakes</h3>
-                <p>Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
-                <button type="button">
+            <li class="products-list_item products-list_item--shakes products-list_item--brown">
+                <h3 class="product-list_title">milkshakes</h3>
+                <p class="product-list_text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
+                <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use></use>
+                        <use href="./images/symbol-defs.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
