--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -5,8 +5,8 @@
       <ul class="advantages-list">
         <li class="advantages-list_item">
           <div class="insite">
-            <svg class="advantages-list_icon" width="50" height="50">
-              <use href="#">
+            <svg class="advantages-list_icon" width="36" height="36">
+              <use href="./images/icons.svg#icon-cow">
               </use>
             </svg>
           </div>
@@ -16,8 +16,8 @@
 
         <li class="advantages-list_item">
           <div class="insite">
-            <svg class="advantages-list_icon" width="50" height="50">
-              <use href="#">
+            <svg class="advantages-list_icon" width="36" height="36">
+              <use href="./images/icons.svg#icon-weight">
               </use>
             </svg>
           </div>
@@ -27,8 +27,8 @@
 
         <li class="advantages-list_item">
           <div class="insite">
-            <svg class="advantages-list_icon" width="50" height="50">
-              <use href="#">
+            <svg class="advantages-list_icon" width="50" height="36">
+              <use href="./images/icons.svg#icon-ice-crema">
               </use>
             </svg>
           </div>
