--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,4 +1,13 @@
+li,
+ul {
+  list-style: none;
+}
+
+.soc-item {
+  width: 34px;
+  border-radius: 50%;
+  background-color: #f8d24e;
+}
 .footer .icon {
   fill: #84a178;
-  background-color: #f8d24e;
 }
