--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,28 +5,31 @@
         <ul class="products-list list">
             <li class="products-list_item products-list_item--ice-cream products-list_item--green">
                 <h3 class="product-list_title">ice cream</h3>
-                <p class="product-list_text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
+                <p class="product-list_text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and
+                    natural stabilizer</p>
                 <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use href="./images/symbol-defs.svg#icon-arrow-black"></use>
+                        <use href="./images/icons.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
             <li class="products-list_item products-list_item--coffee products-list_item--yellow">
                 <h3 class="product-list_title">ice coffee</h3>
-                <p class="product-list_text">Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
+                <p class="product-list_text">Fragrant invigorating drink created from 100% natural ingredients without
+                    the use of preservatives and flavor enhancers</p>
                 <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use href="./images/symbol-defs.svg#icon-arrow-black"></use>
+                        <use href="/images/icons.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
             <li class="products-list_item products-list_item--shakes products-list_item--brown">
                 <h3 class="product-list_title">milkshakes</h3>
-                <p class="product-list_text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
+                <p class="product-list_text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits,
+                    berries and other sweets of your choice</p>
                 <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use href="./images/symbol-defs.svg#icon-arrow-black"></use>
+                        <use href="/images/icons.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
