--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -19,7 +19,7 @@
                     the use of preservatives and flavor enhancers</p>
                 <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use href="/images/icons.svg#icon-arrow-black"></use>
+                        <use href="./images/icons.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
@@ -29,7 +29,7 @@
                     berries and other sweets of your choice</p>
                 <button type="button" class="products-list_button">
                     <svg width="40" height="16">
-                        <use href="/images/icons.svg#icon-arrow-black"></use>
+                        <use href="./images/icons.svg#icon-arrow-black"></use>
                     </svg>
                 </button>
             </li>
