--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,7 +5,7 @@
     <div class="about-image">
       <div class="about-image_circle"></div>
       <img
-        src="./images/cow-desctop-1x.jpg"
+        src="./images/cow-desktop-1x.png"
         alt="cow"
         width="490"
         height="490"
