add mobile menu html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,11 @@
 <header class="header">
     <div class="container">
-        <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60" height="60">
+        <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60">
+        <button class="header__burger-btn" type="button">
+            <svg width="32" height="32">
+                <use class="header__burger-icon-open" href=" ./images/icons.svg#icon-mob-menu-open"></use>
+            </svg>
+        </button>
         <nav class="header__nav">
             <ul class="header__list list">
                 <li class="header__items"><a class="header__link link" href="#">Home</a></li>
@@ -12,6 +17,29 @@
         <button class="header__btn btn" type="button">
             Buy now
             <svg class="header__btn-icon" width="12" height="12">
+                <use href="./images/icons.svg#icon-btn-arrow"></use>
+            </svg>
+        </button>
+    </div>
+
+    <div class="header-mobile">
+        <img class="header__mobile-logo" src="./images/header-logo.png" alt="Logo" width="60">
+        <button class="header__burger-btn-close" type="button">
+            <svg width="32" height="32">
+                <use class="header__burger-icon-close" href="./images/icons.svg#icon-mob-menu-close"></use>
+            </svg>
+        </button>
+        <nav class="header__mobile-nav">
+            <ul class="header__mobile-list list">
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Home</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">How it’s made?</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Our products</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <button class="header__mobile-btn btn" type="button">
+            Buy now
+            <svg class="header__mobile-btn-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-btn-arrow"></use>
             </svg>
         </button>
