--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,10 +1,6 @@
-li,
-ul {
-  list-style: none;
-}
-
 .soc-item {
   width: 34px;
+  height: 34px;
   border-radius: 50%;
   background-color: #f8d24e;
 }
