--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,41 +4,44 @@
       <p class="footer__homemade">homemade ice cream made</p>
       <p class="footer__passion">with passion</p>
     </div>
-    <div class="footer__soc">
-      <ul class="footer__soc soc-list">
-        <li class="soc-item">
-          <a class="soc-link">
-            <svg class="icon" width="10" height="20">
-              <use href="images/icons.svg#icon-facebook-icon"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="soc-item">
-          <a class="soc-link">
-            <svg class="icon" width="20" height="16">
-              <use href="images/icons.svg#icon-telegram-icon"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="soc-item">
-          <a class="soc-link">
-            <svg class="icon" width="20" height="20">
-              <use href="images/icons.svg#icon-github-icon"></use>
-            </svg>
-          </a>
-        </li>
+    <div class="footer__column">
+      <div class="footer__soc">
+        <ul class="footer__soc soc-list">
+          <li class="soc-item">
+            <a class="soc-link">
+              <svg class="icon" width="10" height="20">
+                <use href="images/icons.svg#icon-facebook-icon"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="soc-item">
+            <a class="soc-link">
+              <svg class="icon" width="20" height="16">
+                <use href="images/icons.svg#icon-telegram-icon"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="soc-item">
+            <a class="soc-link">
+              <svg class="icon" width="20" height="20">
+                <use href="images/icons.svg#icon-github-icon"></use>
+              </svg>
+            </a>
+          </li>
 
-      </ul>
-    </div>
-    <address>
-      <span class="footer__contact">Free to contact</span>
-      <a class="footer__link" href="tel:+610383766284">+61 (0) 383766284</a>
-    </address>
-    <div class="footer__copy">
-      <p>© 2022 - IceCream.
-      </p>
-      <p>
-        All Rights Reserved.</p>
+        </ul>
+      </div>
+      <address>
+        <span class="footer__contact">Free to contact</span>
+        <a class="footer__link" href="tel:+610383766284">+61 (0) 383766284</a>
+      </address>
     </div>
   </div>
+  <div class="footer__copy">
+    <p>© 2022 - IceCream.
+    </p>
+    <p>
+      All Rights Reserved.</p>
+  </div>
+
 </footer>
