--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,47 +1,68 @@
 <header class="header">
-    <div class="container">
-        <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60">
-        <button class="header__burger-btn" type="button">
-            <svg width="32" height="32">
-                <use class="header__burger-icon-open" href=" ./images/icons.svg#icon-mob-menu-open"></use>
-            </svg>
-        </button>
-        <nav class="header__nav">
-            <ul class="header__list list">
-                <li class="header__items"><a class="header__link link" href="#">Home</a></li>
-                <li class="header__items"><a class="header__link link" href="#">How it’s made?</a></li>
-                <li class="header__items"><a class="header__link link" href="#">Our products</a></li>
-                <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <button class="header__btn btn" type="button">
-            Buy now
-            <svg class="header__btn-icon" width="12" height="12">
-                <use href="./images/icons.svg#icon-btn-arrow"></use>
-            </svg>
-        </button>
+    <div class="container header__container">
+        <picture class="header__logo">
+            <source srcset=" ./images/header-logo.png 1x, 
+                      ./images/header-logo.png 2x" media="(min-width: 1200px)" />
+            <source srcset=" ./images/header-logo-tab.png 1x, 
+                      ./images/header-logo-tab.png 2x" media="(min-width: 768px)" />
+            <source srcset=" ./images/header-logo-mob.png 1x, 
+                      ./images/header-logo-mob.png 2x" media="(max-width: 767px)" />
+            <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60" />
+        </picture>
+        <div class="header__content">
+            <button class="header__burger-btn" type="button" data-menu-open>
+                <svg width="32" height="32">
+                    <use class="header__burger-icon" href=" ./images/icons.svg#icon-mob-menu-open"></use>
+                </svg>
+            </button>
+            <nav class="header__nav">
+                <ul class="header__list list">
+                    <li class="header__items"><a class="header__link link" href="#">Home</a></li>
+                    <li class="header__items"><a class="header__link link" href="#">How it’s made?</a></li>
+                    <li class="header__items"><a class="header__link link" href="#">Our products</a></li>
+                    <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="header__btn btn" type="button">
+                Buy now
+                <svg class="header__btn-icon" width="12" height="12">
+                    <use href="./images/icons.svg#icon-btn-arrow"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 
-    <div class="header-mobile">
-        <img class="header__mobile-logo" src="./images/header-logo.png" alt="Logo" width="60">
-        <button class="header__burger-btn-close" type="button">
+    <div class="header-mobile visually-hidden" data-menu>
+        <picture class="header__logo">
+            <source srcset=" ./images/header-logo.png 1x, 
+                                      ./images/header-logo.png 2x" media="(min-width: 1200px)" />
+            <source srcset=" ./images/header-logo-tab.png 1x, 
+                                      ./images/header-logo-tab.png 2x" media="(min-width: 768px)" />
+            <source srcset=" ./images/header-logo-mob.png 1x, 
+                                      ./images/header-logo-mob.png 2x" media="(max-width: 767px)" />
+            <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60" />
+        </picture>
+        <button class="header__burger-btn-close" type="button" data-menu-close>
             <svg width="32" height="32">
-                <use class="header__burger-icon-close" href="./images/icons.svg#icon-mob-menu-close"></use>
+                <use class="header__burger-icon" href="./images/icons.svg#icon-mob-menu-close"></use>
             </svg>
         </button>
         <nav class="header__mobile-nav">
             <ul class="header__mobile-list list">
                 <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Home</a></li>
-                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">How it’s made?</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">How it’s made?</a>
+                </li>
                 <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Our products</a></li>
                 <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Contact</a></li>
             </ul>
         </nav>
-        <button class="header__mobile-btn btn" type="button">
-            Buy now
-            <svg class="header__mobile-btn-icon" width="12" height="12">
-                <use href="./images/icons.svg#icon-btn-arrow"></use>
-            </svg>
-        </button>
+        <div class="header__mobile-btn-container">
+            <button class="header__mobile-btn btn" type="button">
+                Buy now
+                <svg class="header__btn-icon" width="12" height="12">
+                    <use href="./images/icons.svg#icon-btn-arrow"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 </header>
