--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-    <div class="container">
+    <div class="container hero__container">
         <div class="hero__thumb">
             <div class="hero__text">
                 <h1 class="hero__title">ice cream
