--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -1,10 +1,27 @@
 .section-products {
     padding-top: 60px;
     padding-bottom: 60px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-image: url(../images/bg-mobile-1px-min.jpg);
     @include retina {
         background-image: url(../images/bg-mobile-2px-min.jpg);
     }
+    @include tablet {
+        background-image: url(../images/bg-tab-1px-min.jpg);
+        
+            @include retina {
+                background-image: url(../images/bg-tab-2px-min.jpg);
+            }
+    }
+        @include desktop {
+            background-image: url(../images/bg-desk-1px-min.jpg);
+    
+            @include retina {
+                background-image: url(../images/bg-desk-2px-min.jpg);
+            }
+        }
 }
 
 .container-products {
@@ -18,41 +35,97 @@
 .container-products_text {
     margin-bottom: 12px;
     font-weight: 800;
-        font-size: 18px;
-        line-height: 1.22;
-        text-align: center;
-        text-transform: uppercase;
-        color: #131313;
+    font-size: 18px;
+    @include tablet {
+        font-size: 22px;
+    }
+        @include desktop {
+            font-size: 30px;
+        }
+    line-height: 1.22;
+    text-align: center;
+    text-transform: uppercase;
+    color: #131313;
 }
 
 .container-products_header {
     margin-bottom: 148px;
-    font-family: 'Seymour One';
+    @include tablet {
+        margin-bottom: 200px;
+    }
+        @include desktop {
+            margin-bottom: 300px;
+        }
+    font-family: 'Seymour One', sans-serif;
     font-size: 30px;
-        line-height: 1.27;
-        text-align: center;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        color: #131313;
+        @include tablet {
+            font-size: 34px;
+        }
+                @include desktop {
+                    font-size: 36px;
+                }
+    line-height: 1.27;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #131313;
 }
 
 .products-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: column;
+    @include tablet {
+        flex-direction: row;
+    }
     gap: 168px;
-    flex-wrap: wrap;
+        @include tablet {
+            gap: 16px;
+        }
+    @include desktop {
+        gap: 29px;
+    }    
+    
 }
 
 
 .products-list_item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding-top: 123px;
     padding-bottom: 16px;
-    min-width: 280px;
+    @include desktop {
+            padding-top: 165px;
+            padding-bottom: 60px;
+        }
+    padding-right: 40px;
+    padding-left: 40px;
+    @include tablet {
+        padding-right: 26px;
+        padding-left: 26px;
+    }
+        @include desktop {
+            padding-right: 64px;
+            padding-left: 64px;
+        }
+    min-width: 100%;
     min-height: 420px;
-    display: block;
+    @include mobile {
+        min-width: 280px;
+    }
+    @include tablet {
+        min-width: calc((100% - 32px) / 3);
+    }
+
+        @include desktop {
+            min-width: calc((100% - 58px) / 3);
+            min-height: 536px;
+        }
+    
     align-items: center;
     position: relative;
     border-radius: 24px;
@@ -78,6 +151,9 @@
     content: '';
     width: 200px;
     height: 200px;
+    @include tablet {
+        height: 197px;
+    }
     @include desktop {
         width: 302px;
         height: 300px;
@@ -88,12 +164,82 @@
     background-position: center;
     border-radius: 50%;
     border: none;
+    z-index: 1;
 
 }
 
+// circle----------------------------
+
+.products-list_top--circle::before {
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    display: inline-block;
+    content: '';
+    width: 200px;
+    height: 200px;
+    @include tablet {
+        height: 197px;
+    }
+    @include desktop {
+        width: 302px;
+        height: 300px;
+    }
+    
+    border-radius: 50%;
+    border: none;   
+}
+
+.products-list_top--green::before {
+    background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)),
+            #D9D9D9;
+        box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+        transform: translate(-18%, -155%);
+        @include tablet {
+            transform: translate(-15%, -164%);
+        }
+                @include desktop {
+                    transform: translate(-17%, -150%);
+                }
+}
+
+.products-list_top--yellow::before {
+    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+        box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+    transform: translate(-17%, -165%);
+    @include tablet {
+            transform: translate(-13%, -165%);
+        }
+        @include desktop {
+            transform: translate(-15%, -150%);
+        }
+}
+
+.products-list_top--brown::before {
+    background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+        box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+    transform: translate(-14%, -165%);
+    @include tablet {
+            transform: translate(-10%, -165%);
+        }
+                @include desktop {
+                    transform: translate(-12%, -150%);
+                }
+}
+
+
+
+
 .products-list_item--ice-cream::before {
     content: '';
-    transform: translate(-50%, -160%);
+    display: block;
+    transform: translateY(-160%);
+    @include tablet {
+    transform: translateY(-170%);
+    }
+        @include desktop {
+            transform: translateY(-155%);
+        }
     background-image: url(../images/ice-cream-products-mob-1x-min.jpg);
     @include retina {
             background-image: url(../images/ice-cream-products-mob-2x-min.jpg);
@@ -118,7 +264,11 @@
 
 .products-list_item--coffee::before {
     content: '';
-    transform: translate(-50%, -170%);
+    display: block;
+    transform: translateY(-170%);
+    @include desktop {
+            transform: translateY(-155%);
+        }
     background-image: url(../images/ice-cream2-products-mob-1x-min.jpg);
 
         @include retina {
@@ -144,7 +294,11 @@
 
 .products-list_item--shakes::before {
     content: '';
-    transform: translate(-50%, -170%);
+    display: block;
+    transform: translateY(-170%);
+    @include desktop {
+            transform: translateY(-155%);
+        }
     background-image: url(../images/ice-cream3-products-mob-1x-min.jpg);
     
         @include retina {
@@ -171,26 +325,48 @@
 
 
 .product-list_title {
+    display: inline-block;
     margin-bottom: 40px;
+    @include desktop {
+        margin-bottom: 66px;
+    }
     font-weight: 700;
-        font-size: 20px;
-        line-height: 1.2;
-        text-align: center;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        color: #131313;
+    font-size: 20px;
+    line-height: 1.2;
+    @include tablet {
+            font-size: 22px;
+        }
+    @include desktop {
+        font-size: 32px;
+    }    
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #131313;
 }
 
 .product-list_text {
-        font-size: 14px;
-        line-height: 1.76;
-        text-align: center;
-        letter-spacing: 0.04em;
-        color: #131313;
-        max-width: 200px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 101px;
+    font-size: 14px;
+    @include desktop {
+        font-size: 16px;
+    }
+    line-height: 1.76;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #131313;
+    min-width: 200px;
+    max-width: 300px;
+    @include tablet {
+        min-width: 0;
+        max-width: 172px;
+    } 
+        @include desktop {
+            
+            max-width: 242px;
+        }
+    
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .products-list_button {
