--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -4,7 +4,10 @@
   gap: 20px;
   margin-bottom: 20px;
   @include tablet {
-    gap: 30px;
+    margin-bottom: 32px;
+  }
+  @include desktop {
+    margin-bottom: 40px;
   }
 }
 .soc-item {
@@ -15,7 +18,19 @@
   height: 34px;
   border-radius: 50%;
   background-color: #f8d24e;
+
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
+
+  &:hover .icon,
+  &:focus .icon,
+  &:active .icon {
+    fill: #ffffff;
+  }
 }
+
 .soc-link {
   display: flex;
   align-items: center;
@@ -35,12 +50,25 @@
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
+    text-decoration: none;
+    @include tablet {
+      font-size: 14px;
+    }
+    @include desktop {
+      font-size: 16px;
+    }
   }
   &__contact {
     color: #131313;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
+    @include tablet {
+      font-size: 14px;
+    }
+    @include desktop {
+      font-size: 16px;
+    }
   }
   &__copy {
     border-top: 1px solid #e1e1e1;
@@ -66,6 +94,19 @@
     @include tablet {
       font-size: 26px;
       margin-bottom: 8px;
+      width: 352px;
+    }
+    @include desktop {
+      font-size: 30px;
+      margin-bottom: 14px;
+      width: 100%;
+    }
+  }
+  &__column {
+    @include tablet {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
     }
   }
   &__passion {
@@ -78,6 +119,11 @@
     width: 200px;
     @include tablet {
       font-size: 48px;
+      width: 352px;
+    }
+    @include desktop {
+      font-size: 58px;
+      width: 100%;
     }
   }
   &__main {
@@ -85,6 +131,9 @@
     margin-bottom: 60px;
     @include tablet {
       margin-bottom: 32px;
+    }
+    @include desktop {
+      margin-bottom: 0;
     }
   }
 }
@@ -97,5 +146,11 @@ address {
 .footer .container {
   @include tablet {
     display: flex;
+    gap: 76px;
+  }
+  @include desktop {
+    display: flex;
+    gap: 356px;
+    padding-bottom: 60px;
   }
 }
