add hero tab and mob

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,20 +9,20 @@
                       ./images/header-logo-mob.png 2x" media="(max-width: 767px)" />
             <img class="header__logo" src="./images/header-logo.png" alt="Logo" width="60" />
         </picture>
-        <div class="header__content">
+        <nav class="header__nav">
+            <ul class="header__list list">
+                <li class="header__items"><a class="header__link link" href="#">Home</a></li>
+                <li class="header__items"><a class="header__link link" href="#">How it’s made?</a></li>
+                <li class="header__items"><a class="header__link link" href="#">Our products</a></li>
+                <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="header__btn-container">
             <button class="header__burger-btn" type="button" data-menu-open>
                 <svg width="32" height="32">
                     <use class="header__burger-icon" href=" ./images/icons.svg#icon-mob-menu-open"></use>
                 </svg>
             </button>
-            <nav class="header__nav">
-                <ul class="header__list list">
-                    <li class="header__items"><a class="header__link link" href="#">Home</a></li>
-                    <li class="header__items"><a class="header__link link" href="#">How it’s made?</a></li>
-                    <li class="header__items"><a class="header__link link" href="#">Our products</a></li>
-                    <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
-                </ul>
-            </nav>
             <button class="header__btn btn" type="button">
                 Buy now
                 <svg class="header__btn-icon" width="12" height="12">
