--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,7 +14,7 @@
               </svg>
             </a>
           </li>
-          <li class="soc-item">
+          <li class="soc-item" target="_blank">
             <a class="soc-link" target="_blank">
               <svg class="icon" width="20" height="16">
                 <use href="images/icons.svg#icon-telegram-icon"></use>
