add hero desktop

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,9 +1,9 @@
-.header {
-  @include desktop {
-    position: absolute;
-    width: 100%;
-  }
-}
+// .header {
+//   @include desktop {
+//     position: absolute;
+//     width: 100%;
+//   }
+// }
 
 .header__container {
   display: flex;
