--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -22,26 +22,33 @@
             </ul>
         </div>
         <div class="hero__description">
-            <img class="hero__description-img" src="./images/hero-round-ice-cream.png" alt="Ice-cream plate">
+            <picture class="hero__description-img">
+                <source srcset=" ./images/hero-round-ice-cream.png 1x, 
+                            ./images/hero-round-ice-cream.png 2x" media="(min-width: 1200px)" />
+                <source srcset=" ./images/hero-round-ice-cream-tab.png 1x, 
+                            ./images/hero-round-ice-cream-tab.png 2x" media="(min-width: 768px)" />
+                <img class="hero__description-img" src="./images/hero-round-ice-cream.png" alt="Ice-cream plate"
+                    width="225" />
+            </picture>
             <div class="hero__description-container">
                 <p class="hero__description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore
                     et</p>
                 <a class="hero__description-link link" href="#">
-                    <svg class="hero__description-icon" width="40">
+                    <svg class="hero__description-icon" width="40" height="16">
                         <use href="./images/icons.svg#icon-arrow-hero"></use>
                     </svg></a>
             </div>
         </div>
         <div class="hero__img-container">
             <picture class="hero__img">
-                <source srcset=" ./images//hero-faces.png 1x, 
-                                                  ./images//hero-faces.png 2x" media="(min-width: 1200px)" />
-                <source srcset=" ./images//hero-faces-tab.png 1x, 
-                                                  ./images//hero-faces-tab.png 2x" media="(min-width: 768px)" />
-                <source srcset=" ./images//hero-faces-mob.png 1x, 
-                                                  ./images//hero-faces-mob.png 2x" media="(max-width: 767px)" />
-                <img class="hero__img" src="./images//hero-faces.png" alt="Ice-cream" width="268" />
+                <source srcset=" ./images/hero-faces.png 1x, 
+                            ./images//hero-faces.png 2x" media="(min-width: 1200px)" />
+                <source srcset=" ./images/hero-faces-tab.png 1x, 
+                            ./images/hero-faces-tab.png 2x" media="(min-width: 768px)" />
+                <source srcset=" ./images/hero-faces-mob.png 1x, 
+                            ./images/hero-faces-mob.png 2x" media="(max-width: 767px)" />
+                <img class="hero__img" src="./images/hero-faces.png" alt="Ice-cream" width="268" />
             </picture>
             <div class="hero__img-blur"></div>
         </div>
