--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -7,6 +7,7 @@ body {
   letter-spacing: 0.04em;
   color: #fcfcfc;
   background: #84a178;
+  cursor: url('../images/cursor-ice.png'), auto;
 }
 
 .link {
@@ -74,11 +75,13 @@ img {
 
   &:hover {
     background: #0a8817;
+    cursor: url('../images/cursor-ice.png'), auto;
   }
 
   &:active,
   &:focus {
     color: #fcfcfc;
+    cursor: url('../images/cursor-ice.png'), auto;
   }
 }
 
