--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,10 +1,3 @@
-// .header {
-//   @include desktop {
-//     position: absolute;
-//     width: 100%;
-//   }
-// }
-
 .header__container {
   display: flex;
   align-items: center;
@@ -79,18 +72,20 @@
 }
 
 .header-mobile {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  z-index: 10;
-  width: 100vw;
-  height: 100vh;
-  background-color: #84a178;
-  top: 0;
-  padding: 12px 32px 64px 32px;
+  @media screen and (min-width: 1px) and (max-width: 1199px) {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
+    background-color: #84a178;
+    top: 0;
+    padding: 12px 32px 64px 32px;
+  }
 
-  @include tablet {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     justify-content: flex-start;
     padding-top: 20px;
     background-color: #97af8d;
@@ -111,6 +106,10 @@
     top: 32px;
     right: 32px;
   }
+
+  @include desktop {
+    display: none;
+  }
 }
 
 .header__mobile-nav {
@@ -121,10 +120,18 @@
     margin-top: 76px;
     margin-bottom: 0;
   }
+
+  @include desktop {
+    display: none;
+  }
 }
 
 .header__mobile-list {
   text-align: center;
+
+  @include desktop {
+    display: none;
+  }
 }
 
 .header__mobile-items {
@@ -135,13 +142,21 @@
       margin-bottom: 40px;
     }
   }
+
+  @include desktop {
+    display: none;
+  }
 }
 
 .header__mobile-link {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 20px;
   line-height: calc(39 / 32);
   color: #fcfcfc;
+
+  @include mobile {
+    font-size: 32px;
+  }
 
   @include tablet {
     font-size: 48px;
@@ -151,12 +166,20 @@
   &:focus {
     color: #131313;
   }
+
+  @include desktop {
+    display: none;
+  }
 }
 
 .header__mobile-btn-container {
   margin: 0 auto;
 
   @include tablet {
+    display: none;
+  }
+
+  @include desktop {
     display: none;
   }
 }
@@ -167,6 +190,10 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+
+  @include desktop {
+    display: none;
+  }
 }
 
 .header__btn-icon {
