--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -24,11 +24,11 @@
         <div class="hero__description">
             <picture class="hero__description-img">
                 <source srcset=" ./images/hero-round-ice-cream.png 1x, 
-                            ./images/hero-round-ice-cream.png 2x" media="(min-width: 1200px)" />
+                            ./images/hero-round-ice-cream-2x.png 2x" media="(min-width: 1200px)" />
                 <source srcset=" ./images/hero-round-ice-cream-tab.png 1x, 
-                            ./images/hero-round-ice-cream-tab.png 2x" media="(min-width: 768px)" />
+                            ./images/hero-round-ice-cream-tab-2x.png 2x" media="(min-width: 768px)" />
                 <img class="hero__description-img" src="./images/hero-round-ice-cream.png" alt="Ice-cream plate"
-                    width="225" />
+                    width="225" loading="lazy" />
             </picture>
             <div class="hero__description-container">
                 <p class="hero__description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -43,12 +43,12 @@
         <div class="hero__img-container">
             <picture class="hero__img">
                 <source srcset=" ./images/hero-faces.png 1x, 
-                            ./images//hero-faces.png 2x" media="(min-width: 1200px)" />
+                            ./images//hero-faces-2x.png 2x" media="(min-width: 1200px)" />
                 <source srcset=" ./images/hero-faces-tab.png 1x, 
-                            ./images/hero-faces-tab.png 2x" media="(min-width: 768px)" />
+                            ./images/hero-faces-tab-2x.png 2x" media="(min-width: 768px)" />
                 <source srcset=" ./images/hero-faces-mob.png 1x, 
-                            ./images/hero-faces-mob.png 2x" media="(max-width: 767px)" />
-                <img class="hero__img" src="./images/hero-faces.png" alt="Ice-cream" width="268" />
+                            ./images/hero-faces-mob-2x.png 2x" media="(max-width: 767px)" />
+                <img class="hero__img" src="./images/hero-faces.png" alt="Ice-cream" width="268" loading="lazy" />
             </picture>
             <div class="hero__img-blur"></div>
         </div>
