--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -45,10 +45,9 @@
           <img src="./images/customer-reviews/s3-min.png" alt="" loading="lazy">
         </div>
         <div class="image-slider__text">
-          <p>Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the excellent
-            service - always
+          <p>Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the excellent service
+            - always
             served politely and quickly!
-
           </p>
         </div>
       </div>
