--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -2,6 +2,27 @@
   padding: 30px;
   min-height: 100%;
   overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../images/bg-mobile-1px-min.jpg);
+  @include retina {
+    background-image: url(../images/bg-mobile-2px-min.jpg);
+  }
+  @include tablet {
+    background-image: url(../images/bg-tab-1px-min.jpg);
+
+    @include retina {
+      background-image: url(../images/bg-tab-2px-min.jpg);
+    }
+  }
+  @include desktop {
+    background-image: url(../images/bg-desk-1px-min.jpg);
+
+    @include retina {
+      background-image: url(../images/bg-desk-2px-min.jpg);
+    }
+  }
 }
 .image-slider {
   padding: 30px 0 70px 0;
